<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oko_osi_z</name>
  <version>0.0.0</version>
  <description>Pokretanje Webots simulacije Crazyflie drona i kontrola tipkovnicom</description>
  <maintainer email="fabijan@todo.todo">fabijan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>webots_ros2_driver</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>crazyflie_simulation</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
